# auto_test

./: pyproject.toml
tests/: test_capitalize.py
