[tool.poetry]
name = "auto-test"
version = "0.1.0"
description = ""
authors = ["AnastasiyaBobko <a.s.bobko@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_test"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
